apps/base/home-homeassistant/deploy/mysql/statefulSet.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: homeassistant
      app.kubernetes.io/component: mysql
  template:
    metadata:
      labels:
        app.kubernetes.io/name: homeassistant
        app.kubernetes.io/component: mysql
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 999 # mysql
        fsGroup: 999
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
      containers:
      - name: mysql
        image: "registry.lan/homeassistant-mysql:9.7.2-oraclelinux9"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 3306
          name: mysql
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
        readinessProbe:
          exec:
            command:
            - sh
            - -c
            - "mysqladmin ping -u root -p${MYSQL_ROOT_PASSWORD}"
          initialDelaySeconds: 3
          periodSeconds: 5
        volumeMounts:
        - name: cluster-config
          mountPath: /etc/localtime
          subPath: localtime
          readOnly: true
        - name: mysql-data
          mountPath: /var/lib/mysql
          subPath: mysql
        - name: mysql-data
          mountPath: /var/lib/mysql-files
          subPath: mysql-files
        - name: tmp-volume
          mountPath: /tmp
        - name: run-volume
          mountPath: /var/run/mysqld
        resources:
          requests:
            cpu: 100m
            memory: 512Mi
          limits:
            cpu: 200m
            memory: 512Mi
      volumes:
      - name: cluster-config
        configMap:
          name: cluster-config
      - name: mysql-data
        persistentVolumeClaim:
          claimName: mysql-data
      - name: tmp-volume
        emptyDir: {}
      - name: run-volume
        emptyDir: {}
      imagePullSecrets:
      - name: docker-config
      nodeSelector:
        capability/general-purpose: 'yes'
