apps/base/home-homeassistant/deploy/mysql/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-mysql
spec:
  ports:
    - port: 3306
      name: mysql
  selector:
      app.kubernetes.io/name: homeassistant
      app.kubernetes.io/component: mysql
