apps/base/home-homeassistant/deploy/mysql/networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-mysql
spec:
  policyTypes: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/name: homeassistant
      app.kubernetes.io/component: mysql

  ingress:
    # Allow from homeassistant
    - ports:
        - port: mysql
      from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: homeassistant
              app.kubernetes.io/component: homeassistant
